--- a/pages/center/message/message.wxml
+++ b/pages/center/message/message.wxml
@@ -1,10 +1,10 @@
 <!--pages/center/message/message.wxml-->
 <import src="../../template/empty.wxml" />
 <view>
-  <view class='item' wx:for="{{list}}">
+  <view class='item' wx:for="{{list}}" bindtap='showMessgaDetail' data-index="{{index}}" wx:key="{{index}}">
     <view class='title'>{{item.titleStr}}</view>
     <view class='time'>{{item.effectTime}}</view>
-    <view class='content'>{{item.content}}</view>
+    <view class='content'>{{item.content0}}</view>
   </view>
 </view>
 
