--- a/pages/index/index/index.wxml
+++ b/pages/index/index/index.wxml
@@ -53,7 +53,7 @@
       </li>
       <li>
         <navigator url='/pages/index/heathList/heathList'>
-          <image src="/style/image/zizhu/index-5.svg"></image>
+          <image src="/style/image/zizhu/index-5.png"></image>
           <text class='txt'>健康小工具</text>
         </navigator>
       </li>
