--- a/pages/into-hospital/index/index.wxml
+++ b/pages/into-hospital/index/index.wxml
@@ -48,7 +48,7 @@
       <view class="per-list-cont">
         <ul class="per-list">
           <li wx:for="{{expertList}}" wx:for-item="item" data-id="{{item.id}}" bindtap="toDoctorDetialView">
-            <image src="{{item.picName}}" style="border-radius: 92rpx" class='img-face-lg' wx:if="{{item.picName}}"></image>
+            <image src="{{item.src}}" style="border-radius: 92rpx" class='img-face-lg' wx:if="{{item.picName}}"></image>
             <image src='/style/svg/expert.svg' class='img-face-lg' wx:else></image>
             <text class='txt-h4'>{{item.name}}</text>
             <!-- <text class='txt-p'>{{item.underDepts[0].name}}</text> -->
